fix(atomic): change breakpoints for grid display + nowrap for table
https://coveord.atlassian.net/browse/KIT-1660

--- a/packages/atomic/src/components/result-lists/result-list-common.pcss
+++ b/packages/atomic/src/components/result-lists/result-list-common.pcss
@@ -205,10 +205,10 @@
     }
 
     &.image-small {
-      @media not all and (min-width: 1180px) {
+      @media not all and (min-width: 1024px) {
         grid-template-columns: repeat(3, 1fr);
       }
-      @media (min-width: 1180px) {
+      @media (min-width: 1024px) {
         grid-template-columns: repeat(4, 1fr);
       }
     }
@@ -235,13 +235,13 @@
     &.image-icon,
     &.image-none {
       @mixin atomic-grid-with-cards;
-      @media not all and (min-width: 320px) {
+      @media not all and (min-width: 640px) {
         grid-template-columns: minmax(0, 1fr);
       }
-      @media (min-width: 320px) {
+      @media (min-width: 768px) {
         grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
       }
-      @media (min-width: 768px) {
+      @media (min-width: 1024px) {
         grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
       }
     }
